Commit - Added new confirm popup + Firebase connection to project + RecyclerView using realtime database + Changed colours of the UI = Changed some class from Fragment to Activity = Removed navigation and used Intent instead
To do (Prio to less Prio)
1. Complete all function except history
2. history
3. UI layout improvements

--- a/app/src/main/res/drawable/calories_circle.xml
+++ b/app/src/main/res/drawable/calories_circle.xml
@@ -18,8 +18,8 @@
                 android:thicknessRatio="16"
                 android:useLevel="true">
                 <gradient
-                    android:endColor="#DE9811"
-                    android:startColor="#E1A228"
+                    android:endColor="#577306"
+                    android:startColor="#5D741A"
                     android:type="sweep" />
             </shape>
         </rotate>
