--- a/app/src/main/res/layout/fragment_edit_calories_pop_up.xml
+++ b/app/src/main/res/layout/fragment_edit_calories_pop_up.xml
@@ -21,7 +21,7 @@
         android:src="@drawable/close_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/edit_target_text"
+        app:layout_constraintStart_toEndOf="@+id/food_confirm_text"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck" />
 
@@ -32,13 +32,13 @@
         android:ems="10"
         android:inputType="numberDecimal"
         android:hint="Enter Calories"
-        app:layout_constraintEnd_toEndOf="@+id/edit_target_text"
+        app:layout_constraintEnd_toEndOf="@+id/food_confirm_text"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/edit_target_text"
-        app:layout_constraintTop_toBottomOf="@+id/edit_target_text" />
+        app:layout_constraintStart_toStartOf="@+id/food_confirm_text"
+        app:layout_constraintTop_toBottomOf="@+id/food_confirm_text" />
 
     <TextView
-        android:id="@+id/edit_target_text"
+        android:id="@+id/food_confirm_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
