--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,34 +2,31 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:id="@+id/drawer_layout"
+    android:background="#FDFDFD"
     android:fitsSystemWindows="true"
     tools:context=".MainActivity">
-
-<!--    NOTES IF DW TO SEE THE SIDE DRAWER REMOVE THE tools:openDrawer="start" -->
+    <!--    NOTES IF DW TO SEE THE SIDE DRAWER REMOVE THE tools:openDrawer="start" -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <include
             android:id="@+id/toolbarHeader"
-            layout="@layout/header"
-            />
+            layout="@layout/header" />
+
         <fragment
             android:id="@+id/fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
-
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbarHeader"
             app:navGraph="@navigation/bottom_nav" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -40,17 +37,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/main_menu"/>
-
-
+            app:menu="@menu/main_menu" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/nav_view"
-        app:headerLayout="@layout/main_menu_header"
-        app:menu="@menu/main_menu"
         android:layout_gravity="start"
-        />
+        app:headerLayout="@layout/main_menu_header"
+        app:menu="@menu/main_menu" />
 </androidx.drawerlayout.widget.DrawerLayout>
