--- a/app/src/main/res/layout/sleep_tracker_record.xml
+++ b/app/src/main/res/layout/sleep_tracker_record.xml
@@ -5,7 +5,7 @@
     android:id="@+id/sleep_record_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
+    android:paddingTop="5dp"
     android:paddingBottom="8dp">
 
     <ImageView
@@ -13,30 +13,42 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/moon"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/sleep_record_time"
+        android:id="@+id/sleep_record_weekday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:textColor="@color/cardContent"
+        android:layout_marginStart="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/sleep_record_img"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="9:20am" />
+        tools:text="Monday" />
 
     <TextView
-        android:id="@+id/sleep_record_amt"
+        android:id="@+id/sleep_record_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:textColor="@color/cardContent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/sleep_record_total_hours"
+        app:layout_constraintStart_toEndOf="@+id/sleep_record_weekday"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="15 May 2022" />
+
+
+    <TextView
+        android:id="@+id/sleep_record_total_hours"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/cardContent"
+        android:layout_marginEnd="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sleep_record_dlt_btn"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="0hr" />
+        tools:text="7.5 hr" />
 
     <ImageButton
         android:id="@+id/sleep_record_dlt_btn"
