--- a/app/src/main/res/layout/activity_update_food.xml
+++ b/app/src/main/res/layout/activity_update_food.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".CaloriesSearchViewActivity">
+    tools:context=".UpdateFoodSearchActivity">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/caloriesSearchViewBar"
@@ -28,11 +28,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/food_list_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="500dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:nestedScrollingEnabled="true"
-        tools:listitem="@layout/calories_tracker_food_list"
-        />
+        tools:listitem="@layout/calories_tracker_food_list" />
 
 </LinearLayout>
