--- a/app/src/main/res/layout/calories_tracker_food_list.xml
+++ b/app/src/main/res/layout/calories_tracker_food_list.xml
@@ -3,13 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@android:color/black"
-        app:layout_constraintBottom_toBottomOf="parent" />
+    android:layout_height="wrap_content"
+    android:background="@drawable/searchview_bg"
+    android:layout_marginBottom="5dp"
+    android:layout_marginHorizontal="5dp"
+    >
 
     <TextView
         android:id="@+id/food_list_name"
@@ -35,6 +33,7 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/food_list_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/food_list_name" />
+        app:layout_constraintTop_toTopOf="@+id/food_list_name"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
