--- a/app/src/main/res/layout/fragment_sleep_tracker.xml
+++ b/app/src/main/res/layout/fragment_sleep_tracker.xml
@@ -133,7 +133,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:gravity="center"
-                    android:text="9 :30 am"
+                    android:text="@string/wakeup_record_time_text"
                     android:textColor="@color/cardContent"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
